--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,7 @@
 <div>
 <%= link_to '投稿する', new_post_path %>
 </div>
+
 <div class="row">
     <div class="col-md-12">
         <table class = "table table-hover">
@@ -11,14 +12,16 @@
                 <tr> 
                     <th>投稿一覧</th>
                     <th></th>
-                    </tr>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
                 <% @posts.each do |post|%>
               
                 <tr>                
                      <th width = "100"><%=image_tag post.user.image.thumb100.url if post.user.image? %></th>
-                      <th width = "900"> <%=link_to post.user.name , user_path(post.user)%><br><%= link_to post.condition, post_path(post) %>をするかわりに、<%=link_to post.content,post_path(post)%></th>
+                     <th width = "100"> <%= link_to post.user.name, user_path(post.user) %>
+                      <th width = "900">  <a href="/posts/<%= post.id %>"><span style="font-size:2em;"><%= post.condition%></span>をするかわりに<br><span style="font-size:2em;"><%=post.content%></span></a></th>
 
                  </tr>
                  <%end%>
