--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
  
   <div class="post">
        
-        <p class="display-5"><%= link_to @post.user.name, user_path(@post.user)%></p>
+        <p class="display-4"><%= link_to @post.user.name, user_path(@post.user)%></p>
 
        <h1 class="display-7"><%= @post.condition %></h1> 
        <p>をするかわりに</p>
@@ -13,8 +13,8 @@
         <p class="lead"><%= @post.user.email %></p>
          <p class="lead"><%= @post.created_at %></p>
       <% if @post.user_id == @current_user.id %>
-      <%= link_to("編集", "/posts/#{@post.id}/edit") %>
-      <%= link_to("削除", "/posts/#{@post.id}/destroy", {method: "post"}) %>
+      <%= link_to "編集する", edit_post_path %>
+      <%=link_to "削除する", post_path(@post), method: :delete, data:{confirm: '削除しますか？'}%>
       <%end%>
       
     </div>
