--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dancers</title>
+    <title>Dancewith</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+ 
   </head>
 
   <body>
@@ -33,7 +34,11 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/users">ダンサー一覧</a>
-     
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/<%= current_user.id %>">マイページ</a>
+         
+      </li>
      
       <li class="nav-item">
            <a class="nav-link" href="/logout" data-method="delete">ログアウト</a>
@@ -64,6 +69,7 @@
         <p class="text-danger"><%=flash[:alert]%></p>
       <%end%>
   </div>
+
     <%= yield %>
 
 
