--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,25 +4,37 @@
 <h2 > ▶︎ <%= @user.genre%></h2>
 <%= image_tag @user.image.thumb.url if @user.image?  %> 
 
+ 
 <div>
+<section class="stats" >
+  <%= render 'shared/stats' %>
+</section>
+<%= render 'follow_form' %>
 
 </div>
 </br>
 <p class="lead"><%= @user.introduce%></p>
 
 <hr class="my-2">
+<% if @user.address %>
+<p><%= @user.address  %>在住 , 
+<%end%>
+<% if @user.age %>
+<%= @user.age%>才 , 
+<%end%>
+<%= @user.sex%>
 <% if @current_user.id == params[:id].to_i %>
-<p><%= @user.address %>在住 , <%= @user.age%>才 , <%= @user.sex%>
 　　<%= link_to '編集する', edit_user_path %></p>
-<%else%>
-<p><%= @user.address %>在住 , <%= @user.age%>才 , <%= @user.sex%></p>
 <%end%>
 <br>
+</div>
+</div>
+
 <div class="container">
 <div class="row">
     <div class="col-md-12">
       <% if @current_user.id == params[:id].to_i %>
-        <table class = "table table-striped">
+        <table class = "table table-hover">
             <thead class="thead-light">
                 <tr>
                     <th >投稿一覧</th>
@@ -32,8 +44,7 @@
             <tbody>
                 <% @user.posts.each do |post|%>
                  <tr>
-                     <td><%=link_to post.condition , post_path(post)%>するかわりに、
-                     <%=link_to post.content , post_path(post)%></td>
+                     <td><a href="/posts/<%=post.id%>"><%=post.condition%>をするかわりに<%=post.content%></a></td>
                      <td> <%=link_to "編集する", edit_post_path(post)%>
                           <%=link_to "削除する", post_path(post), method: :delete, data:{confirm: '削除しますか？'}%>
                      </td>
@@ -42,7 +53,7 @@
             </tbody>
         </table>
         <% elsif @current_user.id != params[:id].to_i %>
-        <table class = "table table-striped">
+        <table class = "table table-hover">
             <thead class="thead-light">
                 <tr>
                     <th>投稿一覧</th>
@@ -53,8 +64,7 @@
                 <% @user.posts.each do |post|%>
                  <tr>
                     
-                     <td><%=link_to post.condition , post_path(post)%>のかわりに<%=link_to post.content , post_path(post)%></td>
-                     <td></td>
+                     <td><a href="/posts/<%=post.id%>"><%=post.condition%>をするかわりに<%=post.content%></a></td>
                  </tr>
                  <%end%>
             </tbody>
@@ -63,8 +73,6 @@
         
     </div>
 
-</div>
-</div>
 </div>
 
 
