--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,18 @@
 @import "bootstrap";
 
+ .stats1 {
+   padding-left: 20px;
+   padding-top: 20px;
+}
+
+.btn-posts{
+  padding-bottom: 10px;
+  
+}
+
+.chat-btn{
+  color: #007bff;
+  text-decoration: none;
+  background-color: transparent;
+  border: none;
+}
