--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 <br>
 <br>
-<div>
-<%= link_to '投稿する', new_post_path %>
+<div class="btn-posts">
+<%= link_to '投稿する', new_post_path ,class: "btn btn-primary  "%>
 </div>
 
 <div class="row">
