--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,4 +1,7 @@
 <li class="list-group-item">
-   <p><%= message.content %></p>
-   <p><%= "#{message.user.email}: #{message.content}" %></p>
+   <%if  message.user_id == @current_user.id%>
+   <p><b><%= "あなた"%></b>: <%= "#{message.content}" %></p>
+   <%else%>
+   <p><b><%= "#{message.user.name}さん"%></b>: <%= "#{message.content}" %></p>
+  <%end%>
 </li>
