--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,24 @@
 <h2 > ▶︎ <%= @user.genre%></h2>
 <%= image_tag @user.image.thumb.url if @user.image?  %> 
 
- 
+<h2><%= @user.email %></h2>
+
+<% if @user.id == current_user.id %>
+
+<% else %>
+  <% if @isRoom == true %>
+    <%= link_to "メッセージ", room_path(@roomId), class: "far fa-envelope" %>
+    
+  <% else %>
+        <%= form_for @room do |f| %>
+            <%= fields_for @entry do |e| %>
+              <%= e.hidden_field :user_id, :value => @user.id %>
+            <% end %>
+            
+            <%= f.submit "メッセージ" , class: "chat-btn " %>
+          <% end %>
+  <%end%>
+<% end %>
 <div>
 <section class="stats" >
   <%= render 'shared/stats' %>
@@ -13,18 +30,19 @@
 
 </div>
 </br>
-<p class="lead"><%= @user.introduce%></p>
+<h2 class="display-5"><b><%= @user.introduce%></b></h2>
 
 <hr class="my-2"> 
-<% if @user.address %>
-<p><%= @user.address  %>在住 , 
+<% if @user.address == nil || @user.address == "" %>
+<%else%>
+  <%= @user.address  %>　
 <%end%>
 <% if @user.age %>
-<%= @user.age%>才 , 
+ <%= @user.age%>才　
 <%end%>
-<%= @user.sex%>
+ <%=  @user.sex%>　
 <% if @current_user.id == params[:id].to_i %>
-　　<%= link_to '編集する', edit_user_path %></p>
+<%= link_to '編集する', edit_user_path %></p>
 <%end%>
 <br>
 </div>
@@ -33,6 +51,15 @@
 <div class="container">
 <div class="row">
     <div class="col-md-12">
+    <%if @user.posts == []%>
+    <table class = "table table-hover">
+     <thead class="thead-light">
+      <tr>
+        <th >投稿はまだありません</th>
+      </tr>
+    </thead>
+    </table>
+    <%else%>
       <% if @current_user.id == params[:id].to_i %>
         <table class = "table table-hover">
             <thead class="thead-light">
@@ -70,7 +97,12 @@
             </tbody>
         </table>
       <% end %>
-        
+
+   <%end%>
+
+ 
+
+
     </div>
 
 </div>
