--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,17 @@
   background-color: transparent;
   border: none;
 }
+
+.like-btn {
+  color: black;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.unlike-btn {
+  background-color: #f31772;
+  border-radius: 5px;
+  color: white;
+  margin-bottom: 10px;
+}
+
