--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -15,9 +15,7 @@
             <thead class="thead-light">
                
                 <tr>
-                    <th ><%=@title %></th>
-                    <th></th>
-                    <th></th>
+                    <th colspan="3" ><%=@title %></th>
                     
                 </tr>
             </thead>
