--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,8 +12,7 @@
        
         <p class="lead"><%= @post.user.email %></p>
          <p class="lead"><%= @post.created_at %></p>
-        <%if @post.likes.count == 0%>
-        <%else%>
+        <%if @post.likes.count %>
          <strong><%= link_to "いいね: #{@post.likes.count}", post_likes_path(@post, id:@post.id ) %></strong>
         <%end%>
          <% if current_user.already_liked?(@post) %>
