--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,6 @@
-<div class="jumbotron">
-<div class="container">
-<h2 class="display-3">Dancewithとは</h2>
-<p class="lead" >ダンサー同士が交流するプラットフォームです<br>想い溢れるダンスを共有しよう</p>
-</div>
+ <div class="dance-background2 top">
+       <h2 class="display-3 about " >Dancewithとは</h2>
+       <p class="lead" >ダンス経験者とダンスをしたい人たちを結ぶマッチングサービスです。<br>みんなで踊ろう。<br>あふれる思いをダンスにしよう。</p>
 </div>
   
  
