--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,18 @@
 @import "bootstrap";
 
+.top {
+  color: white;
+  padding: 30px;
+}
  .stats1 {
    padding-left: 20px;
    padding-top: 20px;
 }
 
+.login {
+  padding-left: 400px;
+  padding-top:  50px;
+}
 .btn-posts{
   padding-bottom: 10px;
   
@@ -28,5 +36,17 @@
   border-radius: 5px;
   color: white;
   margin-bottom: 10px;
+}
+
+.dance-background {
+  background: image-url('dance-background.jpg');
+  height: 1000px;
+  background-size: cover;
+}
+
+.dance-background2 {
+  background: image-url('dance-background2.jpg');
+  height: 2000px;
+  background-size: cover;
 }
 
