--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,6 +1,4 @@
-<div class="jumbotron">
-  <div class="container">
-  <h1 class="display-3">ダンスしようぜ</h1>
-  <p class="lead">かっこいいダンサーになろう</p>
-  </div>
+<div class="dance-background top">
+  <h1 class="display-3 ">Let's play dancing</h1>
+  <p class="lead">かっこいいダンサーになろう。</p>
 </div>
