--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container login">
  <div class="row">
 <%= form_with model:@user, local: true do |f| %>
    <div class="form-group">
