--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,16 +26,19 @@
 }
 
 .like-btn {
-  color: black;
-  border-radius: 5px;
-  margin-bottom: 10px;
+  width: 25px;
+ height: 30px;
+ font-size: 25px;
+ color: #808080; 
+ margin-left: 20px;
 }
 
 .unlike-btn {
-  background-color: #f31772;
-  border-radius: 5px;
-  color: white;
-  margin-bottom: 10px;
+  width: 25px;
+  height: 30px;
+  font-size: 25px;
+  color: #e54747;
+  margin-left: 20px;
 }
 
 .dance-background {
